increase compatibility of SessionLoginEndpoint and CSRFMiddleware
If using CSRFMiddleware and embedding the token within a form field, it is now compatible with SessionLoginEndpoint

--- a/piccolo_api/session_auth/templates/login.html
+++ b/piccolo_api/session_auth/templates/login.html
@@ -37,6 +37,10 @@
         <label>Password</label>
         <input type="password" name="password" />
 
+        {% if csrftoken and csrf_cookie_name %}
+            <input type="hidden" name="{{ csrf_cookie_name }}" value="{{ csrftoken }}" />
+        {% endif %}
+
         <input type="submit" />
     </form>
 </body>
