Custom title for Swagger UI

--- a/piccolo_api/openapi/templates/swagger_ui.html.jinja
+++ b/piccolo_api/openapi/templates/swagger_ui.html.jinja
@@ -3,7 +3,7 @@
 <head>
     <link type="text/css" rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swagger-ui-dist@3/swagger-ui.css">
     <link rel="shortcut icon" href="https://fastapi.tiangolo.com/img/favicon.png">
-    <title>Piccolo Swagger UI</title>
+    <title>{{ swagger_ui_title }}</title>
 </head>
 
 <body>
