show errors in the login template if the request fails

--- a/piccolo_api/session_auth/templates/login.html
+++ b/piccolo_api/session_auth/templates/login.html
@@ -40,6 +40,11 @@
             font-size: 1.8rem;
         }
 
+        p.error {
+            font-size: 0.9rem;
+            color: red;
+        }
+
         label {
             font-size: 0.85rem;
         }
@@ -82,6 +87,10 @@
         <div class="form_wrapper">
             <h1>Login</h1>
 
+            {% if error %}
+                <p class="error">{{ error }}</p>
+            {% endif %}
+
             <form method="POST">
                 <label>Username</label>
                 <input type="text" name="username" />
@@ -91,6 +100,9 @@
                 {% if csrftoken and csrf_cookie_name %}
                     <input type="hidden" name="{{ csrf_cookie_name }}" value="{{ csrftoken }}" />
                 {% endif %}
+
+                <!-- This tells the endpoint to returns a HTML reponse if login fails. -->
+                <input type="hidden" value="html" name="format" />
 
                 <button>Login</button>
             </form>
