cleaning up signup template

--- a/piccolo_api/session_auth/templates/signup.html
+++ b/piccolo_api/session_auth/templates/signup.html
@@ -16,7 +16,7 @@
     <input type="email" name="email" required />
     <label>Password (6 characters minimum)</label>
     <input type="password" name="password" minlength=6 required />
-    <label>Confirm Password (6 characters minimum)</label>
+    <label>Confirm Password</label>
     <input type="password" name="confirm_password" minlength=6 required />
 
 
