add margin to bottom of captcha

--- a/piccolo_api/templates/base.html
+++ b/piccolo_api/templates/base.html
@@ -79,6 +79,10 @@
             text-transform: uppercase;
             width: 100%;
         }
+
+        div.captcha {
+            margin-bottom: 0.5rem;
+        }
     </style>
 </head>
 <body>
