Add CAPTCHA support (#144)
* add sphinx-autobuild for running docs

All of the other Piccolo projects use this - Piccolo API was lagging behind.

* add `Captcha`

* add hcaptcha and recaptcha

* integrate captcha with register endpoint

* update contributing docs

There's a new way of building the docs now

* add `Captcha` to API reference in docs

* fix typo

* added a test for the hcaptcha validator

* added test for hcaptcha with an incorrect token

* added test for reCAPTCHA

* add margin to bottom of captcha

* add example project for register endpoint with CAPTCHAs

* added captcha support to `session_login`

* improve docstring for `Captcha`

* add missing requirements to register demo

* finish CAPTCHA docs

--- a/piccolo_api/templates/register.html
+++ b/piccolo_api/templates/register.html
@@ -23,6 +23,12 @@
     <input type="hidden" name="{{ csrf_cookie_name }}" value="{{ csrftoken }}" />
     {% endif %}
 
+    {% if captcha %}
+        <div class="captcha">
+            {{ captcha.form_html | safe }}
+        </div>
+    {% endif %}
+
     <!-- This tells the endpoint to returns a HTML reponse if login fails. -->
     <input type="hidden" value="html" name="format" />
 
