--- a/piccolo_api/templates/change_password.html
+++ b/piccolo_api/templates/change_password.html
@@ -9,6 +9,8 @@
 <p class="error">{{ error }}</p>
 {% endif %}
 
+<p>Logged in as {{ username }}.<p>
+
 <form method="POST">
     <label>Old Password</label>
     <input type="password" name="old_password" required />
