fix closing html tag

--- a/piccolo_api/templates/change_password.html
+++ b/piccolo_api/templates/change_password.html
@@ -17,8 +17,7 @@
 <p class="error">{{ error }}</p>
 {% endif %}
 
-<p>Logged in as {{ username }}.
-<p>
+<p>Logged in as {{ username }}.</p>
 
 <form method="POST">
     <label>Old Password</label>
