passing min password length into template, and deleting session from DB when password changed

--- a/piccolo_api/templates/change_password.html
+++ b/piccolo_api/templates/change_password.html
@@ -4,37 +4,36 @@
 
 {% block content %}
 {% if success %}
-<form method="GET" action={{login_url}}>
+    <form method="GET" action="{{ login_url }}">
+        <p>Changed password successfully. Please login again to confirm your new credentials.</p>
 
-    <p>Changed password successfully. Please login again to confirm your new credentials.</p>
-
-    <button>Login</button>
-</form>
+        <button>Login</button>
+    </form>
 {% else %}
-<h1>Change Password</h1>
+    <h1>Change Password</h1>
 
-{% if error %}
-<p class="error">{{ error }}</p>
-{% endif %}
-
-<p>Logged in as {{ username }}.</p>
-
-<form method="POST">
-    <label>Old Password</label>
-    <input type="password" name="old_password" required />
-    <label>New Password (6 characters minimum)</label>
-    <input type="password" name="new_password" minlength=6 required />
-    <label>Confirm Password</label>
-    <input type="password" name="confirm_password" minlength=6 required />
-
-    {% if csrftoken and csrf_cookie_name %}
-    <input type="hidden" name="{{ csrf_cookie_name }}" value="{{ csrftoken }}" />
+    {% if error %}
+        <p class="error">{{ error }}</p>
     {% endif %}
 
-    <!-- This tells the endpoint to returns a HTML reponse if login fails. -->
-    <input type="hidden" value="html" name="format" />
+    <p>Logged in as {{ username }}.</p>
 
-    <button>Change Password</button>
-</form>
+    <form method="POST">
+        <label>Old Password</label>
+        <input type="password" name="old_password" required />
+        <label>New Password ({{ min_password_length }} characters minimum)</label>
+        <input type="password" name="new_password" minlength={{ min_password_length }} required />
+        <label>Confirm Password</label>
+        <input type="password" name="confirm_password" minlength={{ min_password_length }} required />
+
+        {% if csrftoken and csrf_cookie_name %}
+            <input type="hidden" name="{{ csrf_cookie_name }}" value="{{ csrftoken }}" />
+        {% endif %}
+
+        <!-- This tells the endpoint to returns a HTML reponse if login fails. -->
+        <input type="hidden" value="html" name="format" />
+
+        <button>Change Password</button>
+    </form>
 {% endif %}
 {% endblock %}
