--- a/piccolo_api/templates/base.html
+++ b/piccolo_api/templates/base.html
@@ -18,6 +18,7 @@
             --error_text_color: {{ styles.error_text_color }};
             --button_color: {{ styles.button_color }};
             --button_text_color: {{ styles.button_text_color }};
+            --border_color: {{ styles.border_color }};
         }
 
         body {
@@ -55,6 +56,13 @@
             color: var(--error_text_color);
         }
 
+        p.hint {
+            border-left: 3px solid var(--border_color);
+            font-size: 0.8rem;
+            box-sizing: border-box;
+            padding: 0.5rem;
+        }
+
         label {
             font-size: 0.85rem;
         }
@@ -72,7 +80,7 @@
         }
 
         input {
-            border: 1px solid rgba(0, 0, 0, 0.2);
+            border: 1px solid var(--border_color);
             padding: 0.5rem;
             margin: 0.5rem 0 0.8rem;
         }
