--- a/piccolo_api/templates/change_password.html
+++ b/piccolo_api/templates/change_password.html
@@ -3,20 +3,13 @@
 {% block title %}Change Password{% endblock %}
 
 {% block content %}
-{% if success %}
-    <form method="GET" action="{{ login_url }}">
-        <p>Changed password successfully. Please login again to confirm your new credentials.</p>
-
-        <button>Login</button>
-    </form>
-{% else %}
     <h1>Change Password</h1>
 
     {% if error %}
         <p class="error">{{ error }}</p>
     {% endif %}
 
-    <p>Logged in as {{ username }}.</p>
+    <p class="hint">Logged in as {{ username }}.</p>
 
     <form method="POST">
         <label>Old Password</label>
@@ -33,7 +26,8 @@
         <!-- This tells the endpoint to returns a HTML reponse if login fails. -->
         <input type="hidden" value="html" name="format" />
 
+        <p class="hint">If successful, you will be redirected to the login page to confirm your new credentials.</p>
+
         <button>Change Password</button>
     </form>
-{% endif %}
 {% endblock %}
