Confirm Password -> Confirm New Password
The text was slightly ambiguous.

--- a/piccolo_api/templates/change_password.html
+++ b/piccolo_api/templates/change_password.html
@@ -16,7 +16,7 @@
         <input type="password" name="old_password" required />
         <label>New Password ({{ min_password_length }} characters minimum)</label>
         <input type="password" name="new_password" minlength={{ min_password_length }} required />
-        <label>Confirm Password</label>
+        <label>Confirm New Password</label>
         <input type="password" name="confirm_password" minlength={{ min_password_length }} required />
 
         {% if csrftoken and csrf_cookie_name %}
