`confirm_password` -> `confirm_new_password`

--- a/piccolo_api/templates/change_password.html
+++ b/piccolo_api/templates/change_password.html
@@ -17,7 +17,7 @@
         <label>New Password ({{ min_password_length }} characters minimum)</label>
         <input type="password" name="new_password" minlength={{ min_password_length }} required />
         <label>Confirm New Password</label>
-        <input type="password" name="confirm_password" minlength={{ min_password_length }} required />
+        <input type="password" name="confirm_new_password" minlength={{ min_password_length }} required />
 
         {% if csrftoken and csrf_cookie_name %}
             <input type="hidden" name="{{ csrf_cookie_name }}" value="{{ csrftoken }}" />
