old password -> current password

--- a/piccolo_api/templates/change_password.html
+++ b/piccolo_api/templates/change_password.html
@@ -12,8 +12,8 @@
     <p class="hint">Logged in as {{ username }}.</p>
 
     <form method="POST">
-        <label>Old Password</label>
-        <input type="password" name="old_password" required />
+        <label>Current Password</label>
+        <input type="password" name="current_password" required />
         <label>New Password ({{ min_password_length }} characters minimum)</label>
         <input type="password" name="new_password" minlength={{ min_password_length }} required />
         <label>Confirm New Password</label>
