show MFA code input on login page

--- a/piccolo_api/templates/session_login.html
+++ b/piccolo_api/templates/session_login.html
@@ -15,6 +15,11 @@
         <label>Password</label>
         <input type="password" name="password" />
 
+        {% if show_mfa_input %}
+        <label>MFA Code</label>
+        <input type="text" required minlength="6" name="mfa_code" />
+        {% endif %}
+
         {% if csrftoken and csrf_cookie_name %}
             <input type="hidden" name="{{ csrf_cookie_name }}" value="{{ csrftoken }}" />
         {% endif %}
