--- a/piccolo_api/templates/session_login.html
+++ b/piccolo_api/templates/session_login.html
@@ -16,7 +16,7 @@
         <input type="password" name="password" />
 
         {% if show_mfa_input %}
-        <label>MFA Code</label>
+        <label>MFA Code (or recovery code)</label>
         <input type="text" required minlength="6" name="{{ mfa_token_name }}" />
         {% endif %}
 
