use a proper template for MFA sign up

--- a/piccolo_api/templates/base.html
+++ b/piccolo_api/templates/base.html
@@ -85,6 +85,11 @@
             margin: 0.5rem 0 0.8rem;
         }
 
+        textarea {
+            width: 100%;
+            max-width: 100%;
+        }
+
         button {
             background-color: var(--button_color);
             border: none;
