improve docs, and rename from register to setup

--- a/example_projects/mfa_demo/templates/home.html
+++ b/example_projects/mfa_demo/templates/home.html
@@ -16,7 +16,7 @@
     <h1>MFA Demo</h1>
     <p>First <a href="/register/">register</a></p>
     <p>Then <a href="/login/">login</a></p>
-    <p>Then <a href="/private/mfa-register/">sign up for MFA</a></p>
+    <p>Then <a href="/private/mfa-setup/">sign up for MFA</a></p>
     <p>Then try the <a href="/private/">private page</a></p>
     <p>And <a href="/private/logout/">logout</a></p>
 </body>
