--- a/piccolo_api/templates/mfa_cancel.html
+++ b/piccolo_api/templates/mfa_cancel.html
@@ -3,7 +3,7 @@
 {% block title %}MFA Authenticator Cancel{% endblock %}
 
 {% block content %}
-    <h1>MFA Register</h1>
+    <h1>MFA Setup</h1>
 
     <p>You are already enrolled.</p>
 
@@ -13,6 +13,6 @@
 
         <label>Enter Password:</label>
         <input type="password" name="password" />
-        <button>Cancel Enrollment</button>
+        <button>Disable MFA</button>
     </form>
 {% endblock %}
