--- a/piccolo_api/templates/mfa_disabled.html
+++ b/piccolo_api/templates/mfa_disabled.html
@@ -6,4 +6,6 @@
     <h1>MFA Disabled</h1>
 
     <p>You no longer require MFA to login - consider re-enabling it when you can.</p>
+
+    <p><a href=".">Re-enable</a></p>
 {% endblock %}
