changed login logic for multiple MFA providers

--- a/piccolo_api/templates/base.html
+++ b/piccolo_api/templates/base.html
@@ -71,12 +71,13 @@
 
         label {
             font-size: 0.85rem;
+            margin: 0.5rem 0;
         }
 
         input,
-        label {
+        label,
+        select {
             display: block;
-            margin: 0.5rem 0;
             width: 100%;
         }
 
@@ -85,7 +86,7 @@
             border-radius: 0.2rem;
         }
 
-        input {
+        input, select {
             border: 1px solid var(--border_color);
             padding: 0.5rem;
             margin: 0.5rem 0 0.8rem;
