MFA using an Authenticator app (#292)
* MFA prototype

* add mfa_providers abstract property

* flesh out email provider a bit more

* wip

* flesh out email some more, and add authenticator

* flesh out `AuthenticatorSeed` some more

* add method for fetching pyotp

* add `pyotp` to requirements

* add proper auth methods for pyotp

* start adding tests

* bump minimum Piccolo version

* test `create_new` method

* add qrcode logic from @sinisaos PR

* flesh out auth methods

* lazy load `qrcode`

* fleshing out logic some more in session login endpoint

* change imports

* make error messages consistent

* add TODO

* adding example app for testing

* add `AuthenticatorProvider` to example app

* added `get_registration_html` to provider

* rename `seed_table` to `secret_table`

* change params in `send_code` for authenticator

* Create README.md

* add `issuer_name` to `AuthenticatorProvider`

* fix typo in docstring

* add `get_registration_json`

* add `get_registration_json` to base class

* try embedding QR code image in HTML response

* flesh out `MFARegisterEndpoint` endpoint

* add todo about primary key

* fix bugs in register endpoint

* fix error - was returning html instead of json

* show MFA code input on login page

* Update README.md

* Update tests.yaml

* fix some linter errors

* add `device_name` column to `AuthenticatorSecret`

* make sure each provider has a custom token name

* make each MFA Provider have a unique token name

This means we can potentially put several MFA providers on the login page

* If the user reused a code make sure auth fails (could be a replay attack)

* add auth test for replay attacks

* add `generate_recovery_code`

* store recovery codes, and return recovery codes in endpoints (taken from @sinisaos example)

* make sure recovery codes can be used to login

* ignore mypy warnings for now

* install pyotp in CI

* endpoi

--- a/piccolo_api/templates/base.html
+++ b/piccolo_api/templates/base.html
@@ -18,6 +18,7 @@
             --error_text_color: {{ styles.error_text_color }};
             --button_color: {{ styles.button_color }};
             --button_text_color: {{ styles.button_text_color }};
+            --link_color: {{ styles.link_color }};
             --border_color: {{ styles.border_color }};
         }
 
@@ -51,6 +52,11 @@
             font-size: 1.8rem;
         }
 
+        a {
+            color: var(--link_color);
+            text-decoration: none;
+        }
+
         p.error {
             font-size: 0.9rem;
             color: var(--error_text_color);
@@ -65,12 +71,13 @@
 
         label {
             font-size: 0.85rem;
+            margin: 0.5rem 0;
         }
 
         input,
-        label {
+        label,
+        select {
             display: block;
-            margin: 0.5rem 0;
             width: 100%;
         }
 
@@ -79,10 +86,15 @@
             border-radius: 0.2rem;
         }
 
-        input {
+        input, select {
             border: 1px solid var(--border_color);
             padding: 0.5rem;
             margin: 0.5rem 0 0.8rem;
+        }
+
+        textarea {
+            width: 100%;
+            max-width: 100%;
         }
 
         button {
@@ -100,6 +112,10 @@
 
         div.captcha {
             margin-bottom: 0.5rem;
+        }
+
+        div.qr_code {
+            text-align: center;
         }
     </style>
 </head>
